# send

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
cmd/send/: send.go
src/: main.rs
